# AgentAccel

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  accel.local.yaml  context_pack.hotspot_refactor.json  context_pack.hotspots.json  context_pack.llm_router_refactor.json  context_pack.settings_refactor.json  context_pack.smoke.json  mcp_request.json  pyproject.toml  test_async_verify.py  test_tool_api.py  test_verify_blocking.py
.claude/: settings.local.json
.github/workflows/: benchmark-harness.yml
.harborpilot/logs/: analysis_cross_agent_stability_fix_20260212_01.json  analysis_cross_project_hardening_20260212_01.json  analysis_last.json  analysis_openhands_stress_fix_20260212_01.json  analysis_phase1_semantic_cache_rule_constraint_20260212.json  analysis_post_stress_hardening_20260212_01.json  analysis_priority_iter_1246_20260212_01.json  analysis_priority_iter_3_timebox_20260212_01.json  mcp_regression_phase1_semantic_cache_rule_constraint_20260212_02.json  mcp_repro.py  tool_api_cancel_e2e_latest.json  tool_api_direct_cancel_retest_latest.json  tool_api_direct_retest_latest.json  (+3 more)
accel/: cli.py  config.py  config_runtime.py  gpu_runtime.py  harborpilot_paths.py  language_profiles.py  mcp_context_utils.py  mcp_server.py  semantic_ranker.py  token_estimator.py  utils.py
docs/: FAQ.md  architecture.md  runbook.md  schema_versioning.md  setup_windows.md  syntax-parsing.md
examples/: accel.local.yaml.example  accel.yaml
scripts/: accel_mcp_entry.py  collect_harborpilot_phase0_baseline.py  gpu_accel_usage_demo.py  gpu_diagnostic.py  run_benchmarks.py  run_harborpilot_phase0.ps1  run_verify.ps1  verify_phase0.ps1
tests/: test_smoke_cli.py  test_smoke_guards.py  test_smoke_mcp.py  test_smoke_verify.py  test_unit_adaptive_budget.py  test_unit_content_search.py  test_unit_eval_metrics.py  test_unit_mcp_coercion.py  test_unit_mcp_path_utils.py  test_unit_pattern_detector.py  test_unit_project_stats.py  test_unit_ranker.py  test_unit_relation_query.py  test_unit_semantic_relations.py  test_unit_snippet_extractor.py  test_unit_storage_cache.py  test_unit_storage_index_cache.py  test_unit_symbol_query.py  test_unit_symbols.py
(+120 files in other folders)
