[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-accel"
version = "0.1.0"
description = "Standalone local code intelligence and verification coprocessor for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "HarborPilot" }]
dependencies = [
    "fastmcp>=2.14.5",
]

[project.scripts]
accel = "accel.cli:main"
accel-mcp = "accel.mcp_server:main"
accel-pre-hook = "accel.hooks.pre_hook:main"
accel-post-hook = "accel.hooks.post_hook:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["accel*"]

[tool.ruff]
extend-exclude = [
    "test_async_verify.py",
    "test_tool_api.py",
    "test_verify_blocking.py",
]

[tool.mypy]
python_version = "3.11"
files = ["accel"]
exclude = '^(test_async_verify\.py|test_tool_api\.py|test_verify_blocking\.py|tests/)'
