[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-accel"
version = "0.1.0"
description = "Standalone local code intelligence and verification coprocessor for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "HarborPilot" }]
dependencies = [
    "fastmcp>=2.14.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
]
syntax = [
    "tree-sitter>=0.23.2",
    "tree-sitter-languages>=1.10.2",
]
search = [
    "tantivy>=0.22.2",
]

[project.scripts]
accel = "accel.cli:main"
accel-mcp = "accel.mcp_server:main"
accel-pre-hook = "accel.hooks.pre_hook:main"
accel-post-hook = "accel.hooks.post_hook:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["accel*"]

[tool.ruff]
cache-dir = ".harborpilot/runtime/.ruff_cache"
extend-exclude = [
    "scripts/diagnostics/*.py",
]

[tool.mypy]
python_version = "3.11"
files = ["accel"]
cache_dir = ".harborpilot/runtime/.mypy_cache"
exclude = '^(scripts/diagnostics/|tests/)'

[tool.pytest.ini_options]
cache_dir = ".harborpilot/runtime/.pytest_cache"
addopts = "-p no:faker"
